--- a/portafolio.html
+++ b/portafolio.html
@@ -6,6 +6,16 @@
     <title>Portafolio</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Portafolio</h1>
+        <h2>Cursos</h2>
+        <p>
+            Curso de Git y GitHub de Alura, Julio de 2024.
+        </p>
+        <footer class="footer">
+
+        </footer>
+
+    </main>
 </body>
 </html>
